// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bold mark 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "bold",
              },
            ],
            "object": "leaf",
            "text": "this is bold",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`code mark 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "code",
              },
            ],
            "object": "leaf",
            "text": "const foo = 123;",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`code mark with escaped characters 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "code",
              },
            ],
            "object": "leaf",
            "text": "<script>alert('foo')</script>",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deleted mark 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "deleted",
              },
            ],
            "object": "leaf",
            "text": "this is strikethrough",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes \`\`\` code fences 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "const hello = 'world';
function() {
  return hello;
}",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "code",
  },
]
`;

exports[`deserializes \`\`\` code fences with language 1`] = `
Array [
  Object {
    "data": Object {
      "language": "javascript",
    },
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "const hello = 'world';
function() {
  return hello;
}",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "code",
  },
]
`;

exports[`deserializes ~~~ code fences 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "const hello = 'world';
function() {
  return hello;
}",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "code",
  },
]
`;

exports[`deserializes code followed by newlines 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "one sentance",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "const hello = 'world';
function() {
  return hello;
}",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "code",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "two sentance",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes empty link 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "",
          },
        ],
        "object": "text",
      },
      Object {
        "data": Object {
          "href": "",
        },
        "isVoid": false,
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "empty",
              },
            ],
            "object": "text",
          },
        ],
        "object": "inline",
        "type": "link",
      },
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes empty string 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes escaped blocks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "# text",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes escaped blocks 2`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "- text",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes escaped blocks 3`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "* text",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes escaped marks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "this is **not bold**",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes escaped marks 2`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "this is *not italic*",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes escaped marks 3`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "this is [not](a link)",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes escaped marks 4`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "this is ![not](an image)",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes hashtag 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "this is a ",
          },
        ],
        "object": "text",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "#hashtag",
              },
            ],
            "object": "text",
          },
        ],
        "object": "inline",
        "type": "hashtag",
      },
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": " example",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes hashtag ignoring dash 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "dash should end ",
          },
        ],
        "object": "text",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "#hashtag",
              },
            ],
            "object": "text",
          },
        ],
        "object": "inline",
        "type": "hashtag",
      },
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "-dash",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes heading1 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "Heading",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "heading1",
  },
]
`;

exports[`deserializes heading2 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "Heading",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "heading2",
  },
]
`;

exports[`deserializes heading3 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "Heading",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "heading3",
  },
]
`;

exports[`deserializes heading4 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "Heading",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "heading4",
  },
]
`;

exports[`deserializes heading5 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "Heading",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "heading5",
  },
]
`;

exports[`deserializes heading6 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "Heading",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "heading6",
  },
]
`;

exports[`deserializes headings followed by newlines 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "a paragraph",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "Heading",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "heading2",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "another paragraph",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes horizontal rule 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": true,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "horizontal-rule",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "a paragraph",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes image 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {
          "alt": "example",
          "src": "http://example.com/logo.png",
        },
        "isVoid": true,
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "image",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes image with title 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {
          "alt": "example",
          "src": "http://example.com/logo.png",
          "title": "image title",
        },
        "isVoid": true,
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "image",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes indented code blocks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "const hello = 'world';
function() {
  return hello;
}",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "code",
  },
]
`;

exports[`deserializes indented list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "one",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "two",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "bulleted-list",
  },
]
`;

exports[`deserializes link 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "",
          },
        ],
        "object": "text",
      },
      Object {
        "data": Object {
          "href": "http://google.com",
        },
        "isVoid": false,
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "google",
              },
            ],
            "object": "text",
          },
        ],
        "object": "inline",
        "type": "link",
      },
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes link with encoded characters 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "",
          },
        ],
        "object": "text",
      },
      Object {
        "data": Object {
          "href": "https://example.com/app/kibana#/discover?_g=(refreshInterval:('$$hashKey':'object:1596',display:'10 seconds',pause:!f,section:1,value:10000),time:(from:now-15m,mode:quick,to:now))&_a=(columns:!(metadata.step,message,metadata.attempt_f,metadata.tries_f,metadata.error_class,metadata.url),index:'logs-',interval:auto,query:(query_string:(analyze_wildcard:!t,query:'metadata.at: Stepper*')),sort:!(time,desc))",
        },
        "isVoid": false,
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "kibana",
              },
            ],
            "object": "text",
          },
        ],
        "object": "inline",
        "type": "link",
      },
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes link with percent symbol 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "",
          },
        ],
        "object": "text",
      },
      Object {
        "data": Object {
          "href": "https://example.com/app/kibana#/visualize/edit/Requests-%25",
        },
        "isVoid": false,
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "kibana",
              },
            ],
            "object": "text",
          },
        ],
        "object": "inline",
        "type": "link",
      },
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes link within mark 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "",
          },
        ],
        "object": "text",
      },
      Object {
        "data": Object {
          "href": "http://google.com",
        },
        "isVoid": false,
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "object": "mark",
                    "type": "bold",
                  },
                ],
                "object": "leaf",
                "text": "google",
              },
            ],
            "object": "text",
          },
        ],
        "object": "inline",
        "type": "link",
      },
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "one",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "two",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "bulleted-list",
  },
]
`;

exports[`deserializes list items with marks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "one ",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "object": "mark",
                        "type": "bold",
                      },
                    ],
                    "object": "leaf",
                    "text": "bold",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "object": "mark",
                        "type": "italic",
                      },
                    ],
                    "object": "leaf",
                    "text": "italic",
                  },
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": " two",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "bulleted-list",
  },
]
`;

exports[`deserializes list surrounded by paragraphs 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "first paragraph",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "list",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "bulleted-list",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "second paragraph",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes mixed list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "list",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "ordered-list",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "another",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "bulleted-list",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "different",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "ordered-list",
  },
]
`;

exports[`deserializes nested list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "one",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "two",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "data": Object {},
                "isVoid": false,
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "isVoid": false,
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "nested",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "paragraph",
                  },
                ],
                "object": "block",
                "type": "list-item",
              },
            ],
            "object": "block",
            "type": "bulleted-list",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "bulleted-list",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "next para",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes one paragraph 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "This is the first sentance
This is the second sentance",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes ordered list items 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "one",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "two",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "ordered-list",
  },
]
`;

exports[`deserializes ordered list items with different numbers 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "one",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "two",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "three",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "ordered-list",
  },
]
`;

exports[`deserializes ordered list items with marks 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "one ",
                  },
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "object": "mark",
                        "type": "bold",
                      },
                    ],
                    "object": "leaf",
                    "text": "bold",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "object": "mark",
                        "type": "italic",
                      },
                    ],
                    "object": "leaf",
                    "text": "italic",
                  },
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": " two",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "ordered-list",
  },
]
`;

exports[`deserializes paragraph 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "This is just a sentance",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes quote 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "this is a quote",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "block-quote",
  },
]
`;

exports[`deserializes quote followed by list with quote 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "this is a quote",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "block-quote",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "this is a list item",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "block-quote",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "ordered-list",
  },
]
`;

exports[`deserializes quote followed by newlines 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "this is a quote",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "block-quote",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "this is a paragraph",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes quotes separated by newlines 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "this is a quote",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "block-quote",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "this is a different quote",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "block-quote",
  },
]
`;

exports[`deserializes tables 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Tables",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-head",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Are",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-head",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Cool",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-head",
          },
        ],
        "object": "block",
        "type": "table-row",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "col 1 is",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "left-aligned",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "$1600",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
        ],
        "object": "block",
        "type": "table-row",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "col 2 is",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "centered",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "$12",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
        ],
        "object": "block",
        "type": "table-row",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "col 3 is",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "right-aligned",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "$1",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
        ],
        "object": "block",
        "type": "table-row",
      },
    ],
    "object": "block",
    "type": "table",
  },
]
`;

exports[`deserializes tables followed by newlines 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Tables",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-head",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Are",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-head",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Cool",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-head",
          },
        ],
        "object": "block",
        "type": "table-row",
      },
      Object {
        "data": Object {},
        "isVoid": false,
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "col 1 is",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "left-aligned",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "isVoid": false,
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "$1600",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
        ],
        "object": "block",
        "type": "table-row",
      },
    ],
    "object": "block",
    "type": "table",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "a new paragraph",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes two paragraphs 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "This is the first sentance",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "This is the second sentance",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes two paragraphs seperated by multiple blank lines 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "This is the first sentance",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "This is the second sentance",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deserializes whitespace string 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": "",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`inserted mark 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "inserted",
              },
            ],
            "object": "leaf",
            "text": "inserted text",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`italic mark 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "italic",
              },
            ],
            "object": "leaf",
            "text": "this is italic",
          },
          Object {
            "marks": Array [],
            "object": "leaf",
            "text": " ",
          },
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "italic",
              },
            ],
            "object": "leaf",
            "text": "this is italic too",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`underlined mark 1`] = `
Array [
  Object {
    "data": Object {},
    "isVoid": false,
    "nodes": Array [
      Object {
        "leaves": Array [
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "underlined",
              },
            ],
            "object": "leaf",
            "text": "underlined text",
          },
        ],
        "object": "text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;
